--- a/src/components/Share.astro
+++ b/src/components/Share.astro
@@ -33,7 +33,7 @@ const twitter = `https://twitter.com/intent/tweet/?text=${fullDescription}&hasht
 ---
 
 <div>
-	<h4>Помогите распространить статью, сделав репост</h4>
+	<h4>Если вам понравилась статья, то помогите ее распространить - сделайте репост</h4>
 
 	<div class="not-prose flex items-center space-x-1 font-sans text-base text-white sm:space-x-2">
 		<a href={telegram} class="flex space-x-1 rounded bg-[#0088cc] px-2 py-0.5">
