--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,6 +3,7 @@ import TablerBrandDiscord from '~icons/tabler/brand-discord?raw';
 import TablerBrandPatreon from '~icons/tabler/brand-patreon?raw';
 import TablerBrandTelegram from '~icons/tabler/brand-telegram?raw';
 import TablerBrandYoutube from '~icons/tabler/brand-youtube?raw';
+import TablerBrandFacebook from '~icons/tabler/brand-facebook?raw';
 import TablerSkull from '~icons/tabler/skull?raw';
 
 export const SOCIALS = [
@@ -29,6 +30,12 @@ export const SOCIALS = [
 		href: 'https://t.me/cyborgs_and_mages',
 		color: 'text-[#0088cc]',
 		icon: TablerBrandTelegram
+	},
+	{
+		label: `Facebook`,
+		href: `https://www.facebook.com/cyborgsandmages`,
+		color: 'text-[#0088cc]',
+		icon: TablerBrandFacebook
 	},
 	{
 		label: 'Youtube',
