--- a/src/components/5e/Creature.astro
+++ b/src/components/5e/Creature.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import { getEntry } from 'astro:content';
+import { getEntryBySlug } from 'astro:content';
 
 import { DND_ALIGNMENTS, DND_SIZES, DND_TYPES } from 'src/consts';
 
@@ -10,7 +10,7 @@ export type Props = {
 
 const { id } = Astro.props;
 
-const creature = await getEntry('creatures', id);
+const creature = await getEntryBySlug('creatures', id);
 
 if (creature === undefined) {
 	throw new Error('Существо не найдено');
@@ -100,7 +100,7 @@ const size = DND_SIZES[data.size];
 
 /* Тип */
 
-/*const type = DND_TYPES[data.type];*/
+/* const type = DND_TYPES[data.type]; */
 ---
 
 <section class="my-4 space-y-4 rounded-md bg-brand-mist p-2 font-sans sm:p-4">
