--- a/src/components/5e/Creature.astro
+++ b/src/components/5e/Creature.astro
@@ -100,7 +100,7 @@ const size = DND_SIZES[data.size];
 
 /* Тип */
 
-/*const type = DND_TYPES[data.type];*/
+const type = DND_TYPES[data.type];
 ---
 
 <section class="my-4 space-y-4 rounded-md bg-brand-mist p-2 font-sans sm:p-4">
